--- a/templates/index.html
+++ b/templates/index.html
@@ -64,39 +64,39 @@
 <div class="center">
     <center><h1>Credit Card Defaulter Predictor</h1></center>
     <form action="{{ url_for('predict')}}" method='POST' class='form'>
-        <label for="limit_bal">Limit Balance </label>:&numsp;<input name='limit_bal' type="text" required ><br>
+        <label for="limit_bal">Limit Balance </label>:&numsp;<input name='limit_bal' type="number" required ><br>
 
         <label for="education">Education</label>:
-            <label ><input type='radio' name="education" value="1" checked>1 - Graduate</label>
-            <label ><input type='radio' name="education" value="2" required>2 - University</label>
-            <label ><input type='radio' name="education" value="3" >3 - High School</label>
-            <label ><input type='radio' name="education" value="4" >4 - Others</label><br><br>
+            <label ><input type='radio' name="education" value=1 checked>1 - Graduate</label>
+            <label ><input type='radio' name="education" value=2 required>2 - University</label>
+            <label ><input type='radio' name="education" value=3 >3 - High School</label>
+            <label ><input type='radio' name="education" value=4 >4 - Others</label><br><br>
 
         <label for="marriage">Marriage</label>:
-            <label ><input type='radio' name="marriage" value="1" required checked>1 - Married</label>
-            <label ><input type='radio' name="marriage" value="2" >2 - Single</label>
-            <label ><input type='radio' name="marriage" value="3">3 - Others</label><br>
+            <label ><input type='radio' name="marriage" value=1 required checked>1 - Married</label>
+            <label ><input type='radio' name="marriage" value=2 >2 - Single</label>
+            <label ><input type='radio' name="marriage" value=3>3 - Others</label><br>
 
 
-        <label for="age">Age</label>:&numsp;<input name='age' type="text" required><br>
+        <label for="age">Age</label>:&numsp;<input name='age' type="number" required><br>
 
         <label for="pay_1">Pay_1</label>:&numsp;<input name='pay_1' type="text" size='1' required><br>
         <small>(*negative value for early payment)</small> <br>
         <br>
-        <label for="bill_amt1">Bill Amount 1</label>:&numsp;<input name='bill_amt1' type="text" required><br>
-        <label for="bill_amt2">Bill Amount 2</label>:&numsp;<input name='bill_amt2' type="text" required><br>
-        <label for="bill_amt3">Bill Amount 3</label>:&numsp;<input name='bill_amt3' type="text" required><br>
-        <label for="bill_amt4">Bill Amount 4</label>:&numsp;<input name='bill_amt4' type="text" required><br>
-        <label for="bill_amt5">Bill Amount 5</label>:&numsp;<input name='bill_amt5' type="text" required><br>
-        <label for="bill_amt6">Bill Amount 6</label>:&numsp;<input name='bill_amt6' type="text" required><br>
+        <label for="bill_amt1">Bill Amount 1</label>:&numsp;<input name='bill_amt1' type="number" required><br>
+        <label for="bill_amt2">Bill Amount 2</label>:&numsp;<input name='bill_amt2' type="number" required><br>
+        <label for="bill_amt3">Bill Amount 3</label>:&numsp;<input name='bill_amt3' type="number" required><br>
+        <label for="bill_amt4">Bill Amount 4</label>:&numsp;<input name='bill_amt4' type="number" required><br>
+        <label for="bill_amt5">Bill Amount 5</label>:&numsp;<input name='bill_amt5' type="number" required><br>
+        <label for="bill_amt6">Bill Amount 6</label>:&numsp;<input name='bill_amt6' type="number" required><br>
 
         <br>
-        <label for="pay_amt1">Pay Amount 1</label>:&numsp;<input name='pay_amt1' type="text" required><br>
-        <label for="pay_amt2">Pay Amount 2</label>:&numsp;<input name='pay_amt2' type="text" required><br>
-        <label for="pay_amt3">Pay Amount 3</label>:&numsp;<input name='pay_amt3' type="text" required><br>
-        <label for="pay_amt4">Pay Amount 4</label>:&numsp;<input name='pay_amt4' type="text" required><br>
-        <label for="pay_amt5">Pay Amount 5</label>:&numsp;<input name='pay_amt5' type="text" required><br>
-        <label for="pay_amt6">Pay Amount 6</label>:&numsp;<input name='pay_amt6' type="text" required><br><br>
+        <label for="pay_amt1">Pay Amount 1</label>:&numsp;<input name='pay_amt1' type="number" required><br>
+        <label for="pay_amt2">Pay Amount 2</label>:&numsp;<input name='pay_amt2' type="number" required><br>
+        <label for="pay_amt3">Pay Amount 3</label>:&numsp;<input name='pay_amt3' type="number" required><br>
+        <label for="pay_amt4">Pay Amount 4</label>:&numsp;<input name='pay_amt4' type="number" required><br>
+        <label for="pay_amt5">Pay Amount 5</label>:&numsp;<input name='pay_amt5' type="number" required><br>
+        <label for="pay_amt6">Pay Amount 6</label>:&numsp;<input name='pay_amt6' type="number" required><br><br>
 
         <center><button type="submit" class="button">Predict</button></center>
     </form>
